Added a loading screen and route type filtering

--- a/src/main/resources/org/mtr/core/website/index.html
+++ b/src/main/resources/org/mtr/core/website/index.html
@@ -4,19 +4,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Transport System Map</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@600&family=Noto+Serif+JP:wght@600&family=Noto+Serif+KR:wght@600&family=Noto+Serif+SC:wght@600&family=Noto+Serif+TC:wght@600&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0"/>
 	<link rel="stylesheet" href="index.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+TC">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+SC">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+JP">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+KR">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 <div id="container">
 	<canvas id="canvas"></canvas>
 	<div id="labels"></div>
 </div>
+<div id="loading" class="material-symbols-outlined">refresh</div>
 </body>
 <script type="importmap">{"imports":{"three":"./three.module.min.js"}}</script>
 <script type="module" src="three.module.min.js"></script>
