--- a/src/main/resources/org/mtr/core/website/index.html
+++ b/src/main/resources/org/mtr/core/website/index.html
@@ -17,8 +17,15 @@
 </div>
 <div id="loading" class="material-symbols-outlined">refresh</div>
 </body>
-<script type="importmap">{"imports":{"three":"./three.module.min.js"}}</script>
 <script type="module" src="three.module.min.js"></script>
 <script type="module" src="BufferGeometryUtils.js"></script>
+<script type="module" src="callback.js"></script>
+<script type="module" src="data.js"></script>
+<script type="module" src="drawing.js"></script>
 <script type="module" src="index.js"></script>
+<script type="module" src="mouse.js"></script>
+<script type="module" src="offscreen.js"></script>
+<script type="module" src="settings.js"></script>
+<script type="module" src="utilities.js"></script>
+<script type="module" src="version.js"></script>
 </html>
