Added hollow line rendering

--- a/src/main/resources/org/mtr/core/website/index.html
+++ b/src/main/resources/org/mtr/core/website/index.html
@@ -28,8 +28,27 @@
 		<span class="material-symbols-outlined">center_focus_weak</span>
 		<span>Centre Map</span>
 	</div>
+	<div id="button-toggle-theme" class="one-row clickable">
+		<span id="icon-toggle-theme" class="material-symbols-outlined"></span>
+		<span id="text-toggle-theme"></span>
+	</div>
+	<div id="button-toggle-text" class="one-row clickable">
+		<span id="icon-toggle-text" class="material-symbols-outlined"></span>
+		<span id="text-toggle-text"></span>
+	</div>
+	<div id="button-toggle-black-and-white" class="one-row clickable">
+		<span id="icon-toggle-black-and-white" class="material-symbols-outlined"></span>
+		<span id="text-toggle-black-and-white"></span>
+	</div>
 	<div id="container-dimensions"></div>
 	<div id="container-route-types"></div>
+	<div class="spacer"></div>
+	<div class="one-row">
+		<span class="material-symbols-outlined">share</span>
+		<span>Interchange Style</span>
+		<span id="button-interchange-style-1" class="clickable push-right">Narrow</span>
+		<span id="button-interchange-style-2" class="clickable">Wide</span>
+	</div>
 	<div id="container-settings"></div>
 </div>
 </body>
