Update Angular and npm libraries

--- a/buildSrc/src/main/resources/website/src/index.html
+++ b/buildSrc/src/main/resources/website/src/index.html
@@ -8,6 +8,6 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-<app-root/>
+<app-root></app-root>
 </body>
 </html>
