--- a/buildSrc/src/main/resources/website/src/index.html
+++ b/buildSrc/src/main/resources/website/src/index.html
@@ -5,7 +5,7 @@
 	<title>Transport System Map</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto&family=Noto+Sans&family=Noto+Serif+JP&family=Noto+Serif+KR&family=Noto+Serif+SC&family=Noto+Serif+TC&display=swap">
 </head>
 <body>
 <app-root></app-root>
