--- a/buildSrc/src/main/resources/website/src/index.html
+++ b/buildSrc/src/main/resources/website/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Transport System Map</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Noto+Sans&family=Noto+Serif+JP&family=Noto+Serif+KR&family=Noto+Serif+SC&family=Noto+Serif+TC&display=swap">
 </head>
 <body>
